@@ -70,6 +70,7 @@ tablebase
 tablebuf
 tablelines
 tablesupport
+tempstream
 typetrait
 user
 x2a
