@@ -312,6 +312,9 @@ provided by bf(man -e bobcat manipulators).
     bf(FBB::TableSupport): Support class for the class bf(Table(Buf)).nl()
     Manpage(tablesupport)
 
+    bf(FBB::TempStream): Temporary fstream. nl()
+    Manpage(tempstream)
+
     bf(FBB::TypeTrait): Traits class template to determine various
     characteristics of types.nl()
     Manpage(typetrait)
@@ -656,7 +659,8 @@ END)
     bf(FBB::Stat): Determines file characteristics.nl()
     Manpage(stat)
 
-
+    bf(FBB::TempStream): Temporary fstream. nl()
+    Manpage(tempstream)
 
     it() bf(TABLES)
 
