@@ -1,0 +1,6 @@
+#include "tempstream.ih"
+
+TempStream::~TempStream()
+{
+    unlink(d_fileName.c_str());
+}
