@@ -1,0 +1,5 @@
+#include "tempfile.ih"
+
+TempStream::
+{
+}
