@@ -1,0 +1,30 @@
+#ifndef INCLUDED_TEMPSTREAM_
+#define INCLUDED_TEMPSTREAM_
+
+#include <string>
+#include <fstream>
+
+namespace FBB
+{
+
+class TempStream: public std::fstream
+{
+    std::string d_fileName;
+
+    public:
+        TempStream(std::string const &base = "/tmp/FBB::TempStream");
+
+        ~TempStream();
+        std::string const &fileName() const;
+};
+
+inline std::string const &TempStream::fileName() const
+{
+    return d_fileName;
+}
+
+}   // FBB
+        
+#endif
+
+
