@@ -1,0 +1,11 @@
+#include "tempstream"
+
+#include <cstring>
+#include <unistd.h>
+#include <fcntl.h>
+
+#include <bobcat/errno>
+
+using namespace std;
+using namespace FBB;
+
