@@ -1,4 +1,6 @@
-bobcat (2.22.10)
+bobcat (2.23.00)
+
+  * Added TemStream creating a temporary fstream
 
   * Added member int beyondDashes() returning the index of the first argument
     beyond a -- argument (or -1)
